--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p>我可爱的宁宁( ´艸｀)</p>
+        <p>我有一壶酒，足以慰风尘。</p>
       </section>
     </div>
 
