--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             <div class="page-bg-imgs-list">
                 <img src="img/story-bg-1.jpg" id="page-1-img" class="main-img" alt="About">
                 <img src="img/story-bg-2.jpg" id="page-2-img" alt="Gallery">
-                <img src="img/story-bg-3.jpg" id="page-3-img" alt="Services">
-                <img src="img/story-bg-4.jpg" id="page-4-img" alt="Contact">                            
+                <img src="img/1013509.jpg" id="page-3-img" alt="Services">
+                <img src="img/1384577.jpg" id="page-4-img" alt="Contact">                            
             </div>
             
             <div class="container-fluid">
@@ -80,7 +80,6 @@
 
                     </div>
                     
-                    <div class="copyrights">Collect from <a href="http://www.cssmoban.com/" >企业网站模板</a></div>
 
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 col-xl-7">
                         <div class="content-wrapper js-content-wrapper">
